crates/config/tests/snapshots/comment_hash_literal.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-hash-literal

## Input

```mical
path /tmp/file#1
key  val#ue

```

## JSON

```json
{
  "path": "/tmp/file#1",
  "key": "val#ue"
}
```

vim:ft=markdown
