crates/config/tests/snapshots/comment_indented_hash_word.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-indented-hash-word

## Input

```mical
  #indented_word value
key value #word

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
