crates/config/tests/snapshots/comment_inline.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-inline

## Input

```mical
key value # this is an inline comment

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
