crates/config/tests/snapshots/comment_only_in_prefix_block.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-only-in-prefix-block

## Input

```mical
s {
  # comment1
  # comment2
}

```

## JSON

```json
{}
```

vim:ft=markdown
