crates/config/tests/snapshots/comment_special_chars.snap
---
source: crates/config/tests/snapshots.rs
---
# comment-special-chars

## Input

```mical
# { } | > "hello" 'world'
key value

```

## JSON

```json
{
  "key": "value"
}
```

vim:ft=markdown
