crates/config/tests/snapshots/comments_directives.snap
---
source: crates/config/tests/snapshots.rs
---
# comments-directives

## Input

```mical
# This is a comment
a 1
#include path/to/file
b 2

```

## JSON

```json
{
  "a": 1,
  "b": 2
}
```

vim:ft=markdown
