crates/config/tests/snapshots/crlf_basic.snap
---
source: crates/config/tests/snapshots.rs
---
# crlf-basic

## Input

```mical
key value
foo bar

```

## JSON

```json
{
  "key": "value",
  "foo": "bar"
}
```

vim:ft=markdown
