crates/config/tests/snapshots/crlf_line_endings.snap
---
source: crates/config/tests/snapshots.rs
---
# crlf-line-endings

## Input

```mical
a 1
b two

```

## JSON

```json
{
  "a": 1,
  "b": "two"
}
```

vim:ft=markdown
