crates/config/tests/snapshots/crlf_mixed.snap
---
source: crates/config/tests/snapshots.rs
---
# crlf-mixed

## Input

```mical
a 1
b 2
c 3

```

## JSON

```json
{
  "a": "1",
  "b": 2,
  "c": "3"
}
```

vim:ft=markdown
